--- a/css/style.css
+++ b/css/style.css
@@ -1543,62 +1543,69 @@ body .wrapper .container .parralax__wave-6 .wave-wrapper .wave-img {
 		height: 25%;
 		background: url("../img/waves/wave-paint.png") center bottom/100% 100% repeat-x;
 		background-size: contain;
-		animation: wave6-anim-right 3s linear infinite;
 }
-@keyframes wave6-anim-right {
-		0% {
-				transform: translate(-1%, 0);
+@media only screen and (orientation: landscape) {
+		body .wrapper .container .parralax__wave-6 .wave-wrapper .wave-img {
+				animation: wave6-anim-right 3s linear infinite;
 		}
-		6.25% {
-				transform: translate(-0.9%, -4%);
-		}
-		12.5% {
-				transform: translate(-0.7%, -7%);
-		}
-		18.75% {
-				transform: translate(-0.4, -9%);
-		}
-		25% {
-				transform: translate(0, -10%);
-		}
-		31.25% {
-				transform: translate(0.4%, -9%);
-		}
-		37.5% {
-				transform: translate(0.7%, -7%);
-		}
-		43.75% {
-				transform: translate(0.9%, -4%);
-		}
-		50% {
-				transform: translate(1%, 0);
-		}
-		56.25% {
-				transform: translate(0.9%, 4%);
-		}
-		62.5% {
-				transform: translate(0.7%, 7%);
-		}
-		68.75% {
-				transform: translate(0.4%, 9%);
-		}
-		75% {
-				transform: translate(0, 10%);
-		}
-		81.25% {
-				transform: translate(-0.4%, 9%);
-		}
-		87.5% {
-				transform: translate(-0.7%, 7%);
-		}
-		93.75% {
-				transform: translate(-0.9%, 4%);
-		}
-		100% {
-				transform: translate(-1%, 0);
+		@keyframes wave6-anim-right {
+				0% {
+						transform: translate(-1%, 0);
+				}
+				6.25% {
+						transform: translate(-0.9%, -4%);
+				}
+				12.5% {
+						transform: translate(-0.7%, -7%);
+				}
+				18.75% {
+						transform: translate(-0.4, -9%);
+				}
+				25% {
+						transform: translate(0, -10%);
+				}
+				31.25% {
+						transform: translate(0.4%, -9%);
+				}
+				37.5% {
+						transform: translate(0.7%, -7%);
+				}
+				43.75% {
+						transform: translate(0.9%, -4%);
+				}
+				50% {
+						transform: translate(1%, 0);
+				}
+				56.25% {
+						transform: translate(0.9%, 4%);
+				}
+				62.5% {
+						transform: translate(0.7%, 7%);
+				}
+				68.75% {
+						transform: translate(0.4%, 9%);
+				}
+				75% {
+						transform: translate(0, 10%);
+				}
+				81.25% {
+						transform: translate(-0.4%, 9%);
+				}
+				87.5% {
+						transform: translate(-0.7%, 7%);
+				}
+				93.75% {
+						transform: translate(-0.9%, 4%);
+				}
+				100% {
+						transform: translate(-1%, 0);
+				}
 		}
 }
 @media only screen and (orientation: portrait) {
+		body .wrapper .container .parralax__wave-6 .wave-wrapper .wave-img {
+				animation: wave6-anim-right 3s linear infinite;
+		}
 		@keyframes wave6-anim-right {
 				0% {
 						transform: translate(-4%, 0);
@@ -1658,6 +1665,7 @@ body .wrapper .container .parralax__liighthouse {
 		height: 100%;
 }
 body .wrapper .container .parralax__liighthouse .lighthouse-wrapper {
+		background-color: #fff;
 		position: absolute;
 		top: 0;
 		left: 0;
